--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ input {
   font-family: "Inknut Antiqua", serif;
   font-size: 1.125rem;
   font-weight: 700;
+
 }
 
 .card {
@@ -107,6 +108,7 @@ input {
   display: flex;
   flex-direction: column;
   color: #d9d9d9;
+  cursor: pointer;
   padding-block: 0.5rem;
 }
 
@@ -125,7 +127,7 @@ input {
 }
 
 .card-image {
-  width: 130px;
+  width: 120px;
 }
 
 .card > div {
@@ -145,6 +147,7 @@ input {
 }
 .card-info p {
   font-weight: 600;
+  font-size: .875rem;
 }
 
 .card-info span {
@@ -166,6 +169,11 @@ input {
   color: var(--gray-1);
   padding: 4px;
   margin-inline: auto;
+}
+
+
+.cetagory p{
+  pointer-events: none;
 }
 
 @media (max-width: 703px) {
